# wpool

./: .gitignore  Cargo.toml  LICENSE.md  README.md  fail.txt  pass.txt
.config/: nextest.toml
.github/workflows/: tests.yml
benches/: wpool_bench.rs  wpool_vs_threadpool.rs
examples/: playground.rs
src/: channel.rs  dispatcher.rs  job.rs  lib.rs  macros.rs  pauser.rs  shared.rs  signal.rs  state.rs  task.rs  tests.rs  thread.rs  wait_group.rs  worker.rs  wpool.rs
src/pacer/: README.md  mod.rs
