[package]
name = "wpool"
version = "0.2.4"
edition = "2024"
authors = ["Matt Oestreich <github.com/matthewoestreich>"]
description = "A thread pool that limits the number of tasks executing concurrently, without restricting how many tasks can be queued."
license = "MIT"
repository = "https://github.com/matthewoestreich/wpool"
homepage = "https://github.com/matthewoestreich/wpool"
readme = "README.md"
keywords = ["async", "multithreading", "pool", "workerpool", "threadpool"]
categories = ["asynchronous", "concurrency"]

[profile.release]
debug = true

[dependencies]
crossbeam-channel = "0.5.15"

[dev-dependencies]
serial_test = "3.2.0"
criterion = "0.7.0"
rayon = "1.11"
threadpool = "1.8.1"

[[bench]]
name = "wpool_bench"
harness = false

[[bench]]
name = "wpool_vs_threadpool"
harness = false

[[bin]]
name = "flamegraph"
path = "bin/flamegraph.rs"

[[bin]]
name = "wpool_bin"
path = "bin/main.rs"

[lib]
name = "wpool"
path = "src/lib.rs"
